[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "nv"
description = "A utility for managing multiple configurations & environments"
readme = "README.rst"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers=[
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
]
dependencies = [
    'sh',
    'boto3',
    'click',
    'cryptography',
    'keyring',
]
dynamic = ["version"]

[project.scripts]
nv = "nv.cli:main"

[project.urls]
"Homepage" = "https://github.com/3stack-software/nv"

[tool.setuptools]
packages = ["nv"]


[tool.setuptools.dynamic]
version = { attr = "nv.__version__"}
